<resources>
    <string name="app_name">PickUp</string>
    <string name="title_activity_maps">Map</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="password1">Password:</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="username1">Username:</string>
    <string name="title_activity_navigation">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email:</string>
    <string name="email1">email</string>
</resources>
