<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/passwordInput1"
        android:layout_width="209dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="374dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="371dp"
        android:layout_height="374dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="160dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </LinearLayout>

    <EditText
        android:id="@+id/emailInput1"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/emailHint"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <EditText
        android:id="@+id/nameInput1"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="name"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="379dp"
        android:layout_height="41dp"
        android:layout_marginTop="96dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"></LinearLayout>

    <TextView
        android:id="@+id/emailHint1"
        android:layout_width="145dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:text="@string/email"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/nameHint1"
        android:layout_width="145dp"
        android:layout_height="41dp"
        android:text="Name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5" />

    <TextView
        android:id="@+id/passwordHint1"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:text="@string/password1"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Cancel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/submit"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="Submit"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"></LinearLayout>
</android.support.constraint.ConstraintLayout>